--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello coursera!</title>
 </head>
 <body>
-<h1>Hello coursera!</h1>
+<h1>Hello coursera! Настяивет че ьпить</h1>
 </body>
 </html>
